[gd_scene load_steps=5 format=3 uid="uid://c8yvt5xj2ykbq"]

[ext_resource type="Script" path="res://scripts/log_resource.gd" id="1_lfnwx"]

[sub_resource type="CylinderMesh" id="CylinderMesh_yjkqr"]
top_radius = 0.2
bottom_radius = 0.2
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yjkqr"]
albedo_color = Color(0.6, 0.4, 0.2, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_yjkqr"]
height = 1.0
radius = 0.2

[node name="Log" type="Node3D"]
script = ExtResource("1_lfnwx")

[node name="LogMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0, -1, 0, 1, 0, 0, 0, 0)
mesh = SubResource("CylinderMesh_yjkqr")
surface_material_override/0 = SubResource("StandardMaterial3D_yjkqr")

[node name="LogCollider" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0, -1, 0, 1, 0, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LogCollider"]
shape = SubResource("CylinderShape3D_yjkqr")

[node name="ProgressIndicator" type="ProgressBar" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -10.0
offset_right = 50.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
max_value = 100.0
show_percentage = false
